--- a/Okhome/app/src/main/res/layout/fragment_basic_info_fragment2.xml
+++ b/Okhome/app/src/main/res/layout/fragment_basic_info_fragment2.xml
@@ -55,15 +55,16 @@
             android:background="#f8f8f8"/>
     </LinearLayout>
 
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/fragment_basic_info2_top"
-        android:layout_above="@+id/chk_cleaning_tools">
+        android:layout_above="@+id/fragment_basic_info2_bottom">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
@@ -73,28 +74,39 @@
                 android:textAlignment="center"/>
 
             <EditText
+                android:gravity="top|left"
+                android:padding="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:id="@+id/detailed_info"
                 android:hint="@string/detailed_info"/>
 
         </LinearLayout>
     </ScrollView>
 
-    <CheckBox
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/chk_cleaning_tools"
-        android:text="@string/use_cleaning_tools"
-        android:layout_above="@+id/btn_end_of_basic_info2"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:id="@+id/btn_end_of_basic_info2"
-        android:text="NEXT"
-        android:textAlignment="center"
+    <LinearLayout
+        android:id="@+id/fragment_basic_info2_bottom"
         android:layout_alignParentBottom="true"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:orientation="vertical">
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/chk_cleaning_tools"
+            android:text="@string/use_cleaning_tools"
+            android:layout_above="@+id/btn_end_of_basic_info2" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:id="@+id/btn_end_of_basic_info2"
+            android:text="NEXT"
+            android:textAlignment="center"
+            android:layout_alignParentBottom="true"
+            />
+
+    </LinearLayout>
+
 
 
 </RelativeLayout>
